changed box2 setting and viewTicket page and cofirm Ticket page

--- a/_confirmCompletion.html
+++ b/_confirmCompletion.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div class="row text-center box2">
+<div class="container box2 text-center">
+    <div class="row">
         <div class="col-xs-4-offset-4">
             <h2> Confirm your delivery</h2>
 
