--- a/_viewTicket.html
+++ b/_viewTicket.html
@@ -1,10 +1,12 @@
 <div class="container text-center" id="_viewTicket">
 
-    <div class="col-xs-4-offset-4">
-        <h2 id="listName"></h2>
-    </div>
 
     <div class="container box">
+        <div class="row" >
+            <div class="col-xs-4-offset-4">
+                <h2 id="listName"></h2>
+            </div>
+        </div>
         <div class="row" >
             <div class="col-xs-4-offset-4">
                 <ul id="_viewTicket_list"></ul>
