--- a/_contact.html
+++ b/_contact.html
@@ -1,6 +1,9 @@
-<div class="container" id="contact">
+<div class="container box2 text-center" id="contact">
     <div class ="row">
         <div class="col-md-8 col-md-offset-2 ">
+            <div>
+                <h2> Contact  </h2>
+            </div>
 
             <!--<form class="input-field">-->
                 <div class="input-field">
