--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -2,7 +2,7 @@
 
 <div class="container box2" id="passwordRecovery">
     <div class="row ">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+        <div class="col-xs-10 col-xs-4-offset-4">
             <div>
                 <h2>Recover Password</h2>
             </div>
