--- a/_passwordReset.html
+++ b/_passwordReset.html
@@ -1,8 +1,7 @@
-no
     <div class = "container box2" id="passwordReset">
 
         <div class="row">
-            <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+            <div class="col-xs-4-offset-4">
                 <h3> Password Reset</h3>
                 <!--<form>-->
                     <div class="input-field">
@@ -14,7 +13,7 @@ no
         </div>
 
         <div class="row">
-            <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+            <div class="col-xs-4-offset-4">
                 <!--<form>-->
                     <div class="input-field">
                         <label for="pass2">Re-enter Password</label>
