--- a/_checkout.html
+++ b/_checkout.html
@@ -26,52 +26,56 @@
 
             <h4>Available times for drop-off.</h4>
             <div class="row">
-                <div class="form-group col-xs-5">
-                    <select class="form-control" id="checkout_time1">
-                        <option>9AM</option>
-                        <option>10AM</option>
-                        <option>11AM</option>
-                        <option>12PM</option>
-                        <option>1PM</option>
-                        <option>2PM</option>
-                        <option>3PM</option>
-                        <option>4PM</option>
-                        <option>5PM</option>
-                        <option>6PM</option>
-                        <option>7PM</option>
-                        <option>8PM</option>
-                        <option>9PM</option>
-                        <option>10PM</option>
-                        <option>11PM</option>
-                        <option>12PM</option>
-                        <option>1AM</option>
-                    </select>
-                </div>
-                <div class="col-xs-2">
-                    <p>to</p>
-                </div>
-                <div class="form-group col-xs-5">
-                    <select class="form-control" id="checkout_time2">
-                        <option>9AM</option>
-                        <option>10AM</option>
-                        <option>11AM</option>
-                        <option>12PM</option>
-                        <option>1PM</option>
-                        <option>2PM</option>
-                        <option>3PM</option>
-                        <option>4PM</option>
-                        <option>5PM</option>
-                        <option>6PM</option>
-                        <option>7PM</option>
-                        <option>8PM</option>
-                        <option>9PM</option>
-                        <option>10PM</option>
-                        <option>11PM</option>
-                        <option>12PM</option>
-                        <option>1AM</option>
-                    </select>
+                <div class="col-xs-12 nohighlight" id="appendCalendar">
                 </div>
             </div>
+            <div class="form-group col-xs-5">
+            <select class="form-control" id="checkout_time1">
+            <option>9AM</option>
+            <option>10AM</option>
+            <option>11AM</option>
+            <option>12PM</option>
+            <option>1PM</option>
+            <option>2PM</option>
+            <option>3PM</option>
+            <option>4PM</option>
+            <option>5PM</option>
+            <option>6PM</option>
+            <option>7PM</option>
+            <option>8PM</option>
+            <option>9PM</option>
+            <option>10PM</option>
+            <option>11PM</option>
+            <option>12PM</option>
+            <option>1AM</option>
+            </select>
+            </div>
+            <div class="col-xs-2">
+            <p>to</p>
+            </div>
+            <div class="form-group col-xs-5">
+            <select class="form-control" id="checkout_time2">
+            <option>9AM</option>
+            <option>10AM</option>
+            <option>11AM</option>
+            <option>12PM</option>
+            <option>1PM</option>
+            <option>2PM</option>
+            <option>3PM</option>
+            <option>4PM</option>
+            <option>5PM</option>
+            <option>6PM</option>
+            <option>7PM</option>
+            <option>8PM</option>
+            <option>9PM</option>
+            <option>10PM</option>
+            <option>11PM</option>
+            <option>12PM</option>
+            <option>1AM</option>
+            </select>
+            </div>
+            </div>
+
 
             <div class="row" style="text-align: center">
                 <a type="button" id="checkout_submitcheckout" class="btn waves-effects orange">Continue</a>
@@ -83,3 +87,18 @@
 </div>
 
 <script src="js/_checkout.js"></script>
+
+<style>
+    .selected{
+        color: orange;
+    }
+    .nohighlight {
+        -webkit-touch-callout: none; /* iOS Safari */
+        -webkit-user-select: none;   /* Chrome/Safari/Opera */
+        -khtml-user-select: none;    /* Konqueror */
+        -moz-user-select: none;      /* Firefox */
+        -ms-user-select: none;       /* Internet Explorer/Edge */
+        user-select: none;           /* Non-prefixed version, currently
+                                  not supported by any browser */
+    }
+</style>
