add links and fix the history

--- a/_congrats_driver_finish_shopping.html
+++ b/_congrats_driver_finish_shopping.html
@@ -5,7 +5,7 @@
             <div>
                 <h2> Congratulations!</h2>
                 </p> We posted your ticket, and you will be notified as soon as it's accepted! </p>
-                <a type="button" class="btn waves-effects orange">
+                <a type="button" class="btn waves-effects orange" id = "congrats_end_shopping_to_delivery">
                     Go To You Deliveries
                 </a>
             </div>
@@ -13,3 +13,4 @@
     </div>
 </div>
 
+<script src="js/_congrats_driver_finish_shopping.js"></script>
