--- a/_viewTicket.html
+++ b/_viewTicket.html
@@ -16,14 +16,11 @@
         <div class = "row">
             <div class="col-xs-4-offset-4">
                 <div class="driver-footer">
-                    <div id="_viewTicket_footerInfo">
-                        <div id="_viewTicket_numItems"></div>
-                        <div class="text-center">
-                            <a id="_viewTicket_submit_list" type="button" class="btn waves-effect orange">
-                                Accept Ticket
-                            </a>
-                        </div>
-
+                    <div class = "row" id="_viewTicket_footerInfo">
+                        <div class = "col-xs-4" id="_viewTicket_numItems"></div>
+                        <a id="_viewTicket_submit_list" type="button" class="col-xs-4 text-center btn-flat waves-effect waves-teal">
+                            Accept Ticket
+                        </a>
                     </div>
                 </div>
             </div>
