--- a/_pendingPayment.html
+++ b/_pendingPayment.html
@@ -4,7 +4,7 @@
         <div class="col-xs-4-offset-4">
             <div>
                 <h2> Processing </h2>
-                <h5> Please wait, your payment is being processed. </h5>
+                <h5> Please wait, your payment is being processed through PayPal. </h5>
             </div>
             <div id="loading_icon">
                 <span class="glyphicon glyphicon-repeat glyphicon-repeat-animate"></span>
