--- a/_submitted.html
+++ b/_submitted.html
@@ -2,8 +2,9 @@
 <div class="container box2 text-center" id="submitted" >
     <div class="row">
         <div class="col-xs-4-offset-4">
-            <h2>Payment submitted. Ticket is now posted!</h2>
-            <a id="submit_submitted" type="button" class="btn waves-effect orange">Confirm</a>
+            <h2>Ticket Submitted</h2>
+            <h5>Your service fee has been received, and your ticket is now submitted to the Fetch queue!</h5>
+            <a id="submit_submitted" type="button" class="btn waves-effect orange">View Ticket Status</a>
         </div>
     </div>
 </div>
