--- a/_cancelled.html
+++ b/_cancelled.html
@@ -2,9 +2,10 @@
     <div class="row">
         <div class="col-xs-4-offset-4">
             <div>
-                <h2>Payment has been cancelled.</h2>
+                <h2>Ticket Not Submitted</h2>
+                <h5>PayPal indicates that you have cancelled your submission.</h5>
                 <a id="submit_cancelled" type="button" class="btn waves-effects orange">
-                    Confirm
+                    Go Back and Edit Shopping List
                 </a>
             </div>
         </div>
