--- a/index.html
+++ b/index.html
@@ -143,18 +143,18 @@
         notificationCount: 0,
         chatCount: 0,
         chat: {},
-        appendChat: function (id, arr) {
+        appendChat: function (id, arr, name) {
             if (!loader.chat.hasOwnProperty(id)) {
                 loader.chat[id] = {
                     messages: [],
                     isOpen: false,
-                    name: arr[0]
+                    name: name
                 };
                 var u = loader.chat[id];
-                for (var i = 1; i < arr.length; i++) {
-                    u.messages.push(arr[i]);
-                }
-                loader.openChat(id, arr[0])
+//                for (var i = 1; i < arr.length; i++) {
+//                    u.messages.push(arr[i]);
+//                }
+//                loader.openChat(id, arr[0])
             }
             else if (!loader.chat[id].isOpen) {
                 var u = loader.chat[id];
@@ -168,7 +168,8 @@
                 var chat = $(document.getElementById('chatForm' + id).parentNode.parentNode).find('.window');
                 for (var i = 0; i < arr.length; i++) {
                     u.messages.push(arr[i]);
-                    chat.append("<div>" + arr[i] + "</div>");
+                    console.log(arr[i]);
+                    chat.append(arr[i]);
                 }
             }
         },
@@ -177,7 +178,7 @@
                 loader.chat[id] = {
                     messages: [],
                     isOpen: false,
-                    name: "name"
+                    name: name
                 };
             }
 
@@ -208,7 +209,8 @@
                     if (message.length > 0) {
 
                         var parent = $(this).parent();
-                        $(parent).parent().find('.window').append('<div class="ours"><div>' + message + '</div></div>');
+                        var content = '<div class="ours"><div>' + message + '</div></div>';
+                        $(parent).parent().find('.window').append(content);
                         $.ajax({
                             type: "POST",
                             url: "/chat",
@@ -219,9 +221,6 @@
                                 message: message
                             })
                         });
-                        var w = $(parent).find(".window");
-                        var content  = "<div>" + message + "</div>";
-                        w.append(content);
                         c.messages.push(content);
                         test = w;
                         $('#chatWindow' + id).scrollTop(100000);
@@ -234,7 +233,7 @@
                 var w = $(e).find('.window');
                 var m = c.messages;
                 for (var i = 0; i < m.length; i++) {
-                    $(w).append("<div>" + m[i] + "</div>");
+                    $(w).append(m[i]);
                 }
                 $('#chats').append(e);
             }
@@ -385,7 +384,7 @@
                         }
                         var c = data.chat;
                         for (var user in c) {
-                            loader.appendChat(user, c[user]); //If new, first element in array should be username
+                            loader.appendChat(user, c[user], c[0]); //If new, first element in array should be username
                         }
 
                         if (data.isInactive) {
@@ -422,7 +421,6 @@
             document.cookie = "user=" + data.userId + ";expires=" + d.toUTCString();
             console.log(data.isLoggedIn);
             if (!data.isLoggedIn) {
-                console.log("just logged in first time");
                 loader.userId = data.userId;
                 loader.isLoggedIn = true;
                 loader.isDriver = false;
