--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
         notificationCount: 0,
         chatCount: 0,
         chat: {},
+        notificationSound: new Audio('/notify.mp3'),
         appendChat: function (id, arr, name) {
             if (!loader.chat.hasOwnProperty(id)) {
                 loader.chat[id] = {
@@ -171,7 +172,10 @@
                     console.log(arr[i]);
                     chat.append(arr[i]);
                 }
+
+                $('#chatWindow' + id).scrollTop(100000);
             }
+            loader.notificationSound.play();
         },
         openChat: function (id, name) {
             if (!loader.chat.hasOwnProperty(id)) {
@@ -235,7 +239,9 @@
                 for (var i = 0; i < m.length; i++) {
                     $(w).append(m[i]);
                 }
+
                 $('#chats').append(e);
+                $('#chatWindow' + id).scrollTop(100000);
             }
 
         },
@@ -327,6 +333,7 @@
             document.getElementById("notifications").appendChild(e);
             setTimeout(function () {
                 $(e).css("transform", "translateX(-400px)")
+                loader.notificationSound.play();
             }, 100);
             setTimeout(function () {
                 e.firstChild.dataset.changepage = "false";
