--- a/_checkout.html
+++ b/_checkout.html
@@ -3,102 +3,106 @@
         <div class="col-xs-offset-2 col-xs-8">
             <h2>Continue Checkout</h2>
 
-            <h4>If driver cannot locate your specific item, buy... </h4>
-            <div class="list-group vertical-center" id="checkout_notes" data-toggle="buttons">
+            <div class=row>
+                <h4>If driver cannot locate your specific item, buy... </h4>
+                <div class="list-group vertical-center" id="checkout_notes" data-toggle="buttons">
+                    <div class="row">
+                        <label class="btn list-group-item active">
+                            <input type="radio" name="specialnotes" id="checkout_option1" value="cheapest"
+                                   autocomplete="off" checked>Cheapest option
+                        </label>
+                    </div>
+                    <div class="row">
+                        <label class="btn list-group-item">
+                            <input type="radio" name="specialnotes" id="checkout_option2" value="expensive"
+                                   autocomplete="off">Most expensive option
+                        </label><s></s>
+                    </div>
+                    <div class="div">
+                        <label class="btn list-group-item">
+                            <input type="radio" name="specialnotes" id="checkout_option3" value="none"
+                                   autocomplete="off">Nothing
+                        </label>
+                    </div>
+                </div>
+
+                <h4>Available times for drop-off.</h4>
                 <div class="row">
-                    <label class="btn list-group-item active">
-                        <input type="radio" name="specialnotes" id="checkout_option1" value="cheapest"
-                               autocomplete="off" checked>Cheapest option
-                    </label>
+                    <div class="col-xs-12 nohighlight" id="appendCalendar">
+                    </div>
                 </div>
-                <div class="row">
-                    <label class="btn list-group-item">
-                        <input type="radio" name="specialnotes" id="checkout_option2" value="expensive"
-                               autocomplete="off">Most expensive option
-                    </label><s></s>
+                <div class="form-group col-xs-5">
+                    <select class="form-control" id="checkout_time1">
+                        <option>9AM</option>
+                        <option>10AM</option>
+                        <option>11AM</option>
+                        <option>12PM</option>
+                        <option>1PM</option>
+                        <option>2PM</option>
+                        <option>3PM</option>
+                        <option>4PM</option>
+                        <option>5PM</option>
+                        <option>6PM</option>
+                        <option>7PM</option>
+                        <option>8PM</option>
+                        <option>9PM</option>
+                        <option>10PM</option>
+                        <option>11PM</option>
+                        <option>12PM</option>
+                        <option>1AM</option>
+                    </select>
                 </div>
-                <div class="div">
-                    <label class="btn list-group-item">
-                        <input type="radio" name="specialnotes" id="checkout_option3" value="none" autocomplete="off">Nothing
-                    </label>
+                <div class="col-xs-2">
+                    <p>to</p>
+                </div>
+                <div class="form-group col-xs-5">
+                    <select class="form-control" id="checkout_time2">
+                        <option>9AM</option>
+                        <option>10AM</option>
+                        <option>11AM</option>
+                        <option>12PM</option>
+                        <option>1PM</option>
+                        <option>2PM</option>
+                        <option>3PM</option>
+                        <option>4PM</option>
+                        <option>5PM</option>
+                        <option>6PM</option>
+                        <option>7PM</option>
+                        <option>8PM</option>
+                        <option>9PM</option>
+                        <option>10PM</option>
+                        <option>11PM</option>
+                        <option>12PM</option>
+                        <option>1AM</option>
+                    </select>
                 </div>
             </div>
-
-            <h4>Available times for drop-off.</h4>
-            <div class="row">
-                <div class="col-xs-12 nohighlight" id="appendCalendar">
-                </div>
-            </div>
-            <div class="form-group col-xs-5">
-            <select class="form-control" id="checkout_time1">
-            <option>9AM</option>
-            <option>10AM</option>
-            <option>11AM</option>
-            <option>12PM</option>
-            <option>1PM</option>
-            <option>2PM</option>
-            <option>3PM</option>
-            <option>4PM</option>
-            <option>5PM</option>
-            <option>6PM</option>
-            <option>7PM</option>
-            <option>8PM</option>
-            <option>9PM</option>
-            <option>10PM</option>
-            <option>11PM</option>
-            <option>12PM</option>
-            <option>1AM</option>
-            </select>
-            </div>
-            <div class="col-xs-2">
-            <p>to</p>
-            </div>
-            <div class="form-group col-xs-5">
-            <select class="form-control" id="checkout_time2">
-            <option>9AM</option>
-            <option>10AM</option>
-            <option>11AM</option>
-            <option>12PM</option>
-            <option>1PM</option>
-            <option>2PM</option>
-            <option>3PM</option>
-            <option>4PM</option>
-            <option>5PM</option>
-            <option>6PM</option>
-            <option>7PM</option>
-            <option>8PM</option>
-            <option>9PM</option>
-            <option>10PM</option>
-            <option>11PM</option>
-            <option>12PM</option>
-            <option>1AM</option>
-            </select>
-            </div>
-            </div>
-
-
-            <div class="row" style="text-align: center">
-                <a type="button" id="checkout_submitcheckout" class="btn waves-effects orange">Continue</a>
-                <a type="button" id="checkout_close" class="btn waves-effects orange">Close</a>
-            </div>
-
         </div>
+
+        <div class="row" style="text-align: center">
+            <a type="button" id="checkout_submitcheckout" class="btn waves-effects orange">Continue</a>
+            <a type="button" id="checkout_close" class="btn waves-effects orange">Close</a>
+        </div>
+
     </div>
+</div>
 </div>
 
 <script src="js/_checkout.js"></script>
 
 <style>
-    .selected{
+    .selected {
         color: orange;
     }
+
     .nohighlight {
         -webkit-touch-callout: none; /* iOS Safari */
-        -webkit-user-select: none;   /* Chrome/Safari/Opera */
-        -khtml-user-select: none;    /* Konqueror */
-        -moz-user-select: none;      /* Firefox */
-        -ms-user-select: none;       /* Internet Explorer/Edge */
-        user-select: none;           /* Non-prefixed version, currently
-                                  not supported by any browser */
+        -webkit-user-select: none; /* Chrome/Safari/Opera */
+        -khtml-user-select: none; /* Konqueror */
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+        user-select: none;
+        /* Non-prefixed version, currently
+                               not supported by any browser */
     }
 </style>
