--- a/_tickets.html
+++ b/_tickets.html
@@ -1,6 +1,6 @@
-<div class= "text-center" id="tickets">
+<div class= "container text-center" id="tickets">
 
-    <div class="box container">
+    <div class="box">
         <div class="row">
             <div class="col-xs-4-offset-4">
                 <div>
