changed the tickets page

--- a/_tickets.html
+++ b/_tickets.html
@@ -12,25 +12,25 @@
         <div class="row marketButtons">
 
             <div class="col-xs-6 col-md-3">
-                <div class="store selected" data-name="ralphs">
+                <div class="store" data-name="ralphs">
                     <h4>RALPHS</h4>
                 </div>
             </div>
 
             <div class="col-xs-6 col-md-3">
-                <div class="store  selected" data-name="tjs">
+                <div class="store " data-name="tjs">
                     <h4>TJ's</h4>
                 </div>
             </div>
 
             <div class="col-xs-6 col-md-3">
-                <div class="store selected" data-name="wholeFoods">
+                <div class="store " data-name="wholeFoods">
                     <h4>WHOLEFOODS</h4>
                 </div>
             </div>
 
             <div class="col-xs-6 col-md-3">
-                <div class="store selected" data-name="vons">
+                <div class="store " data-name="vons">
                     <h4>VONS</h4>
                 </div>
             </div>
