shopped to purchased

--- a/_yourDeliveries.html
+++ b/_yourDeliveries.html
@@ -23,7 +23,7 @@
         <div class="container box">
             <div class="row">
                 <div class="col-xs-4-offset-4">
-                    <h3>Shopped Tickets</h3>
+                    <h3>Purchased Tickets</h3>
                     <ul id="yourDeliveries_shopped_tickets"></ul>
                 </div>
             </div>
