--- a/_history.html
+++ b/_history.html
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <h3>Shopped Tickets</h3>
+                <h3>Purchased Tickets</h3>
                 <ul id="yourOrders_shopped_tickets" class=text-center"></ul>
             </div>
 
