--- a/_congrats_driver_finish_shopping.html
+++ b/_congrats_driver_finish_shopping.html
@@ -4,7 +4,7 @@
         <div class="col-xs-4-offset-4">
             <div>
                 <h2> Congratulations!</h2>
-                </p> We posted your ticket, and you will be notified as soon as it's accepted! </p>
+                </p> Well Done! We'll notify the shopper that you are on the way! </p>
                 <a type="button" class="btn waves-effects orange" id = "congrats_end_shopping_to_delivery">
                     Go To You Deliveries
                 </a>
