added map stuff

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="js/underscore.js"></script>
     <script src="js/loader.js"></script>
 
+    <script src="js/map.js"></script>
     <!-- changes background every 30 seconds -->
     <script src="js/_backgroundImage.js"></script>
 
