simulate payment only when valid checkout input

--- a/index.html
+++ b/index.html
@@ -322,6 +322,9 @@
                         loader._checkout.loadData(data.checkout);
                         loader._checkout.version = data.checkoutVersion;
                     }
+                    if (data.currentPage != loader.currentPage) {
+                        loader.setCurrentPage(data.currentPage, whatever);
+                    }
                 }
             });
         },
