--- a/_accSetting.html
+++ b/_accSetting.html
@@ -7,8 +7,9 @@
                 <!--<h2>Account Information</h2>-->
                 <div id="user-image-content" style="width: 100%;position: absolute; top: 50%; left: 50%;
                 transform: translate(-50%, -50%)">
-                    <img style="width: 80%; margin: 10%" class="img-circle" id="accSettingAbove-img"
-                         src="placeholder/person5.png">
+                    <img style="width: 80%; margin: 8%" class="img-circle" id="accSettingAbove-img"
+                         src="placeholder/person5.png"><br>
+                    <a  onclick="goToPage('_takeProfilePicture')">Edit Picture</a>
 
 
                 </div>
