--- a/_driverList.html
+++ b/_driverList.html
@@ -23,6 +23,16 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col-xs-4-offset-4">
+                    <div class="input-field">
+                        <label for="driver_note">Special Note:</label>
+                        <input disabled type="text" class="form-control bfh-phone" data-country="US"
+                               id="driver_note">
+                    </div>
+                </div>
+            </div>
+
             <div class = "row">
                 <div class="col-xs-4-offset-4">
                     <div class="driver-footer">
