Final style changes. DO NOT OVERWRITE

--- a/_accSetting.html
+++ b/_accSetting.html
@@ -1,6 +1,6 @@
 <div id="accSetting">
 
-    <div class="container box2" style="text-align: center">
+    <div class="container box" style="text-align: center">
         <div class="row" style="height: 100%;">
 
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="position: relative; height: 442px;">
