--- a/_cancelled.html
+++ b/_cancelled.html
@@ -1,6 +1,6 @@
-<div class ="container box2 text-center" id="cancelled">
+<div class ="container box text-center" id="cancelled">
     <div class="row">
-        <div class="col-xs-4-offset-4">
+        <div class="col-xs-12">
             <div>
                 <h2>Ticket Not Submitted</h2>
                 <h5>PayPal indicates that you have cancelled your submission.</h5>
