--- a/_contact.html
+++ b/_contact.html
@@ -1,4 +1,4 @@
-<div class="container box2 text-center" id="contact">
+<div class="container box text-center" id="contact">
     <div class ="row">
         <div class="col-md-8 col-md-offset-2 ">
             <div>
