--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -1,8 +1,8 @@
 
 
-<div class="container box2" id="passwordRecovery">
+<div class="container box" id="passwordRecovery">
     <div class="row ">
-        <div class="col-xs-10 col-xs-4-offset-4">
+        <div class="col-xs-10 col-xs-12">
             <div>
                 <h2>Recover Password</h2>
             </div>
