--- a/_pendingPayment.html
+++ b/_pendingPayment.html
@@ -1,7 +1,7 @@
 
-<div class="container box2">
+<div class="container box">
     <div class="row text-center">
-        <div class="col-xs-4-offset-4">
+        <div class="col-xs-12">
             <div>
                 <h2> Processing </h2>
                 <h5> Please wait, your payment is being processed through PayPal. </h5>
@@ -11,4 +11,8 @@
             </div>
         </div>
     </div>
+</div>
+<div class="footerBars">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
 </div>
