--- a/_shopping.html
+++ b/_shopping.html
@@ -1,47 +1,40 @@
-<div class="container text-center" id="shopping">
+<div class="container box text-center" id="shopping">
 
 
-    <div class="container box">
-
-        <div class="row" id="shoppingHeader">
-            <div class="col-xs-4-offset-4">
-                <h2>Shopping List</h2>
-            </div>
+    <div class="row" id="shoppingHeader">
+        <div class="col-xs-12">
+            <h2>Shopping List</h2>
         </div>
+    </div>
 
-        <div class="row">
-            <div class="col-xs-4-offset-4">
-                <form id="shopping_list_form">
+    <div class="row">
+        <div class="col-xs-12">
+            <form id="shopping_list_form">
                 <span><input id="shoppingCheckListItem" class="input" type="text" name="checkListItem"
                              placeholder="What do you need?" autocomplete="off"
                              autofocus/></span>
-                </form>
-                <ul id="shopping_list">
+            </form>
+            <ul id="shopping_list">
 
-                </ul>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-xs-4-offset-4">
-                <div class="todo-footer">
-                    <div class = "row" id="footerInfo">
-                        <div class = "col-xs-4" id="shopping_numItems"></div>
-                        <a id="shopping_submit_list" type="button" class="col-xs-4 waves-teal btn-flat waves-effects">
-                            Submit
-                        </a>
-                    </div>
-                </div>
-            </div>
+            </ul>
         </div>
     </div>
 
-    <div class="footerBars">
-        <div class="footer2"></div>
-        <div class="footer3"></div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="row" id="footerInfo">
+                <div class="col-xs-4" id="shopping_numItems"></div>
+                <a id="shopping_submit_list" type="button" class="col-xs-4 waves-teal btn-flat waves-effects">
+                    Submit
+                </a>
+            </div>
+        </div>
     </div>
 
 </div>
-
+<div class="footerBars">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
 <script src="js/_shopping.js"></script>
 
