--- a/_submitted.html
+++ b/_submitted.html
@@ -1,11 +1,15 @@
 
-<div class="container box2 text-center" id="submitted" >
+<div class="container box text-center" id="submitted" >
     <div class="row">
-        <div class="col-xs-4-offset-4">
+        <div class="col-xs-12">
             <h2>Ticket Submitted</h2>
             <h5>Your service fee has been received, and your ticket is now submitted to the Fetch queue!</h5>
             <a id="submit_submitted" type="button" class="btn waves-effect orange">View Ticket Status</a>
         </div>
     </div>
+</div>
+<div class="footerBars">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
 </div>
 <script src="/js/_submitted.js"></script>
