--- a/frontEnd/Jen/GroceryList.html
+++ b/frontEnd/Jen/GroceryList.html
@@ -33,7 +33,7 @@
                              autofocus/></span>
             </form>
         </div>
-        <div class="todo-footer">
+        <div class="">
             <strong><span class="count-todos"></span></strong>
             <div id="container">
                 <div id="item"></div>
