--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -1,19 +1,19 @@
 <div id="_cancelTicket" class="container box text-center">
-    <div class="col-xs-4-offset-4">
+    <div class="col-xs-12">
         <div>
             <h2 id="listName_cancelTicket"></h2>
             <h3 id="phone_cancelTicket"></h3>
         </div>
     </div>
 
-    <div class="row" >
-        <div class="col-xs-4-offset-4">
+    <div class="row">
+        <div class="col-xs-12">
             <ul id="_cancelTicket_list"></ul>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-xs-4-offset-4">
+        <div class="col-xs-12">
             <div class="input-field">
                 <label for="cancelTicket_note">Special Note:</label>
                 <input disabled type="text" class="form-control bfh-phone" data-country="US"
@@ -22,10 +22,9 @@
         </div>
     </div>
 
-    <div class = "row">
-        <div class="col-xs-4-offset-4">
-            <div class="driver-footer">
-                <div class = "row" id="_cancelTicket_footerInfo">
+    <div class="row">
+        <div class="col-xs-12">
+                <div class="row" id="_cancelTicket_footerInfo">
                     <div class="col-xs-4" id="_cancelTicket_numItems"></div>
                     <a id="cancelTicket_list_btn" type="button" class="btn-flat waves-effect orange">
                         Close
@@ -33,10 +32,13 @@
                     <a id="cancelTicket_cancel_btn" type="button" class="btn-flat waves-effect orange">
                         Cancel ticket
                     </a>
-                </div>
+
             </div>
         </div>
     </div>
-
+</div>
+<div class="footerBars">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
 </div>
 <script src="js/_cancelTicket.js"></script>
