--- a/_confirmCompletion.html
+++ b/_confirmCompletion.html
@@ -1,10 +1,10 @@
-<div class="container box2 text-center">
+<div class="container box text-center">
     <div class="row">
-        <div class="col-xs-4-offset-4">
+        <div class="col-xs-12">
             <h2> Confirm your delivery</h2>
 
             <div class="row">
-                <div class="col-xs-4-offset-4">
+                <div class="col-xs-12">
                     <div id="shopper_icon" class="col-xs-4"></div>
                     <div id="shopper_name" class="col-xs-8">
                         <h4 id="shopperName"></h4>
@@ -14,13 +14,13 @@
 
             <div class="container box">
                 <div class="row" >
-                    <div class="col-xs-4-offset-4">
+                    <div class="col-xs-12">
                         <ul id="_driver_confirm_list"></ul>
                     </div>
                 </div>
 
                 <div class = "row">
-                    <div class="col-xs-4-offset-4">
+                    <div class="col-xs-12">
                         <div class="confirm-footer">
                             <div id="_confirm_footerInfo">
                                 <div id="_driver_confirm_numItems"></div>
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xs-4-offset-4">
+                    <div class="col-xs-12">
                         <div id="receipt"></div>
                     </div>
                 </div>
