--- a/_congrats.html
+++ b/_congrats.html
@@ -1,8 +1,8 @@
 
 
-<div class="container box2 text-center">
+<div class="container box text-center">
     <div class="row">
-        <div class="col-xs-4-offset-4">
+        <div class="col-xs-12">
             <div>
                 <h2> Congratulations!</h2>
                 </p> We posted your ticket, and you will be notified as soon as it's accepted! </p>
