--- a/_driverList.html
+++ b/_driverList.html
@@ -1,60 +1,55 @@
+<!--<div class="container text-center" id="_driverList2_header">-->
+<!--<div class="row" >-->
+<!--<div class="col-xs-12">-->
+<!--<h2 id="listName_driverList"></h2>-->
+<!--<h3 id="phone"></h3>-->
+<!--</div>-->
+<!--</div>-->
 
 
-    <!--<div class="container text-center" id="_driverList2_header">-->
-        <!--<div class="row" >-->
-        <!--<div class="col-xs-12">-->
-            <!--<h2 id="listName_driverList"></h2>-->
-            <!--<h3 id="phone"></h3>-->
-        <!--</div>-->
-    <!--</div>-->
-
-    <div class = "container text-center">
-        <div class="box text-center">
-            <div class="row" id="driverListHeader">
-                <div class="col-xs-4-offset-4">
-                    <div>
-                        <h2 id="listName_driverList"></h2>
-                        <h3 id="phone"></h3>
-                    </div>
+    <div class="box text-center">
+        <div class="row" id="driverListHeader">
+            <div class="col-xs-12">
+                <div>
+                    <h2 id="listName_driverList"></h2>
+                    <h3 id="phone"></h3>
                 </div>
             </div>
-            <div class="row" >
-                <div class="col-xs-4-offset-4">
-                    <ul id="_driverList2_list"></ul>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <ul id="_driverList2_list"></ul>
             </div>
+        </div>
 
-            <div class="row">
-                <div class="col-xs-4-offset-4">
-                    <div class="input-field">
-                        <label for="driver_note">Special Note:</label>
-                        <input disabled type="text" class="form-control bfh-phone" data-country="US"
-                               id="driver_note">
-                    </div>
-                </div>
-            </div>
-
-            <div class = "row">
-                <div class="col-xs-4-offset-4">
-                    <div class="driver-footer">
-                        <div class = "row" id="_driver_footerInfo">
-                            <div class="col-xs-4" id="_driver_numItems"></div>
-                            <a id="_driver_submit_list" type="button" class="col-xs-4 waves-teal btn-flat waves-effects">
-                                    submit
-                            </a>
-                        </div>
-                    </div>
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="input-field">
+                    <label for="driver_note">Special Note:</label>
+                    <input disabled type="text" class="form-control bfh-phone" data-country="US"
+                           id="driver_note">
                 </div>
             </div>
         </div>
 
-        <div class ="footerBars">
-            <div class="footer2"></div>
-            <div class="footer3"></div>
+        <div class="row">
+            <div class="col-xs-12">
+                    <div class="row" id="_driver_footerInfo">
+                        <div class="col-xs-4" id="_driver_numItems"></div>
+                        <a id="_driver_submit_list" type="button" class="col-xs-4 waves-teal btn-flat waves-effects">
+                            Submit
+                        </a>
+                    </div>
+            </div>
         </div>
-
     </div>
-</div>
+
+    <div class="footerBars">
+        <div class="footer2"></div>
+        <div class="footer3"></div>
+    </div>
+
+
 
 <script src="js/_driverList.js"></script>
 
