--- a/_history.html
+++ b/_history.html
@@ -1,42 +1,39 @@
-<div id="_history" class="container text-center">
-    <div class="box">
-        <div class="row">
-            <div class="col-xs-12 col-md-12">
-                <div>
-                    <h2 class="">Your Orders</h2>
-                </div>
+<div id="_history" class="containe box text-center">
+    <div class="row">
+        <div class="col-xs-12 col-md-12">
+            <div>
+                <h2 class="">Your Orders</h2>
             </div>
         </div>
-        <div class="row">
-            <div class="col-xs-12 col-md-6">
-                <h3>Pending Tickets</h3>
-                <ul id="yourOrders_pending_tickets" class=text-center"></ul>
-            </div>
-
-
-            <div class="col-xs-12 col-md-6">
-                <h3>Accepted Tickets</h3>
-                <ul id="yourOrders_accepted_tickets" class=text-center"></ul>
-            </div>
-
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-md-6">
+            <h3>Pending Tickets</h3>
+            <ul id="yourOrders_pending_tickets" class=text-center"></ul>
         </div>
-        <div class="row">
-            <div class="col-xs-12 col-md-6">
-                <h3>Purchased Tickets</h3>
-                <ul id="yourOrders_shopped_tickets" class=text-center"></ul>
-            </div>
 
-            <div class="col-xs-12 col-md-6">
-                <h3>Delivered Tickets</h3>
-                <ul id="yourOrders_delivered_tickets" class=text-center"></ul>
-            </div>
+
+        <div class="col-xs-12 col-md-6">
+            <h3>Accepted Tickets</h3>
+            <ul id="yourOrders_accepted_tickets" class=text-center"></ul>
         </div>
 
     </div>
-    <div class="footerBars">
-        <div class="footer2"></div>
-        <div class="footer3"></div>
+    <div class="row">
+        <div class="col-xs-12 col-md-6">
+            <h3>Purchased Tickets</h3>
+            <ul id="yourOrders_shopped_tickets" class=text-center"></ul>
+        </div>
+
+        <div class="col-xs-12 col-md-6">
+            <h3>Delivered Tickets</h3>
+            <ul id="yourOrders_delivered_tickets" class=text-center"></ul>
+        </div>
     </div>
+</div>
+<div class="footerBars">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
 </div>
 
 <script src="/js/_history.js"></script>
