--- a/_passwordReset.html
+++ b/_passwordReset.html
@@ -1,7 +1,7 @@
-    <div class = "container box2" id="passwordReset">
+    <div class = "container box" id="passwordReset">
 
         <div class="row">
-            <div class="col-xs-4-offset-4">
+            <div class="col-xs-12">
                 <h3> Password Reset</h3>
                 <!--<form>-->
                     <div class="input-field">
@@ -13,7 +13,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-4-offset-4">
+            <div class="col-xs-12">
                 <!--<form>-->
                     <div class="input-field">
                         <label for="pass2">Re-enter Password</label>
