--- a/_payment.html
+++ b/_payment.html
@@ -1,7 +1,7 @@
 
 <div id="payment">
     <div class="container-fluid text-center row">
-        <div class="col-xs-4-offset-4">
+        <div class="col-xs-12">
             <h1>Payment</h1>
 
             <h4>Your Order: </h4>
