--- a/_rateDriver.html
+++ b/_rateDriver.html
@@ -1,6 +1,6 @@
 
 <div id="rating-page">
-    <div class="container text-center box2">
+    <div class="container text-center box">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
                 <h2 id="driver-name_rateDriver" data-id="5876"></h2>
