--- a/_receiptPictureEnterPrice.html
+++ b/_receiptPictureEnterPrice.html
@@ -1,6 +1,6 @@
-<div class="container text-center box2" id="receipt-pic">
+<div class="container text-center box" id="receipt-pic">
     <div class="row">
-        <div class="col-xs-4-offset-4" id="receipt-button-box-outer">
+        <div class="col-xs-12" id="receipt-button-box-outer">
 
             <h2>Receipt Picture</h2>
 
@@ -13,7 +13,7 @@
 
             <div class="row">
                 <!--<div class="col-xs-4-offset-4">-->
-                    <div class= "col-xs-4-offset-4" id="receipt-button-box">
+                    <div class= "col-xs-12" id="receipt-button-box">
                         <!--<div class="btn btn-default" id="takeReceiptButton1">Take Photo</div>-->
                         <!--<div class="btn btn-primary" id="redoReceiptButton1">Retake Photo</div>-->
                         <!--<h4>or</h4>-->
