--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -1,19 +1,19 @@
 <div id="_shoppingStatus" class="container box text-center">
-    <div class="col-xs-4-offset-4">
+    <div class="col-xs-12">
         <div>
             <h2 id="listName_shoppingStatus"></h2>
             <h3 id="phone_shoppingStatus"></h3>
         </div>
     </div>
 
-    <div class="row" >
-        <div class="col-xs-4-offset-4">
+    <div class="row">
+        <div class="col-xs-12">
             <ul id="_shoppingStatus_list"></ul>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-xs-4-offset-4">
+        <div class="col-xs-12">
             <div class="input-field">
                 <label for="shoppingstatus_note">Special Note:</label>
                 <input disabled type="text" class="form-control bfh-phone" data-country="US"
@@ -22,15 +22,13 @@
         </div>
     </div>
 
-    <div class = "row">
-        <div class="col-xs-4-offset-4">
-            <div class="driver-footer">
-                <div class = "row" id="_shoppingStatus_footerInfo">
-                 <div class="col-xs-4" id="_shoppingStatus_numItems"></div>
-                    <a id="shoppingStatus_list_btn" type="button" class="btn waves-effect orange">
-                        Close
-                    </a>
-                </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="row" id="_shoppingStatus_footerInfo">
+                <div class="col-xs-4" id="_shoppingStatus_numItems"></div>
+                <a id="shoppingStatus_list_btn" type="button" class="btn waves-effect orange">
+                    Close
+                </a>
             </div>
         </div>
     </div>
