--- a/_signUp.html
+++ b/_signUp.html
@@ -1,6 +1,6 @@
 
 
-<div class="container text-center box2" id="signUp-container">
+<div class="container text-center box" id="signUp-container">
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
         <h2 class="form-signin-heading">Fetch Sign-Up</h2><br>
