--- a/_tickets.html
+++ b/_tickets.html
@@ -2,7 +2,7 @@
 
     <div class="box">
         <div class="row">
-            <div class="col-xs-4-offset-4">
+            <div class="col-xs-12">
                 <div>
                     <h2 class="text-center">Avaliable Tickets</h2>
                 </div>
@@ -37,7 +37,7 @@
 
         </div>
         <div class="row">
-            <div class="col-xs-4-offset-4">
+            <div class="col-xs-12">
                 <ul id="tickets_content" class=text-center"></ul>
             </div>
         </div>
