--- a/_viewTicket.html
+++ b/_viewTicket.html
@@ -3,26 +3,24 @@
 
     <div class="container box">
         <div class="row" >
-            <div class="col-xs-4-offset-4">
+            <div class="col-xs-12">
                 <h2 id="listName"></h2>
             </div>
         </div>
         <div class="row" >
-            <div class="col-xs-4-offset-4">
+            <div class="col-xs-12">
                 <ul id="_viewTicket_list"></ul>
             </div>
         </div>
 
         <div class = "row">
-            <div class="col-xs-4-offset-4">
-                <div class="driver-footer">
+            <div class="col-xs-12">
                     <div class = "row" id="_viewTicket_footerInfo">
                         <div class = "col-xs-4" id="_viewTicket_numItems"></div>
                         <a id="_viewTicket_submit_list" type="button" class="col-xs-4 text-center btn-flat waves-effect waves-teal">
                             Accept Ticket
                         </a>
                     </div>
-                </div>
             </div>
         </div>
     </div>
