Layout of everything fixed.

--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -1,11 +1,12 @@
 <div id="_cancelTicket" class="container box text-center">
-    <div class="col-xs-12">
-        <div>
+    <div class="row">
+        <div class="col-xs-12">
+
             <h2 id="listName_cancelTicket"></h2>
             <h3 id="phone_cancelTicket"></h3>
+
         </div>
     </div>
-
     <div class="row">
         <div class="col-xs-12">
             <ul id="_cancelTicket_list"></ul>
@@ -24,20 +25,20 @@
 
     <div class="row">
         <div class="col-xs-12">
-                <div class="row" id="_cancelTicket_footerInfo">
-                    <div class="col-xs-4" id="_cancelTicket_numItems"></div>
-                    <a id="cancelTicket_list_btn" type="button" class="btn-flat waves-effect orange">
-                        Close
-                    </a>
-                    <a id="cancelTicket_cancel_btn" type="button" class="btn-flat waves-effect orange">
-                        Cancel ticket
-                    </a>
+            <div class="row" id="_cancelTicket_footerInfo">
+                <div class="col-xs-4" id="_cancelTicket_numItems"></div>
+                <a id="cancelTicket_list_btn" type="button" class="btn-flat waves-effect orange">
+                    Close
+                </a>
+                <a id="cancelTicket_cancel_btn" type="button" class="btn-flat waves-effect orange">
+                    Cancel ticket
+                </a>
 
             </div>
         </div>
     </div>
 </div>
-<div class="footerBars">
+<div class="footerBars container">
     <div class="footer2"></div>
     <div class="footer3"></div>
 </div>
