--- a/_congrats_driver_finish_shopping.html
+++ b/_congrats_driver_finish_shopping.html
@@ -4,7 +4,7 @@
         <div class="col-xs-12">
             <div>
                 <h2> Congratulations!</h2>
-                </p> Well Done! We'll notify the shopper that you are on the way! </p>
+                <h5> Well Done! We'll notify the shopper that you are on the way! </h5>
                 <a type="button" class="btn waves-effects orange" id = "congrats_end_shopping_to_delivery">
                     Go To You Deliveries
                 </a>
@@ -12,5 +12,8 @@
         </div>
     </div>
 </div>
-
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
 <script src="js/_congrats_driver_finish_shopping.js"></script>
