--- a/_shoppingStatus.html
+++ b/_shoppingStatus.html
@@ -34,4 +34,8 @@
     </div>
 
 </div>
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
 <script src="js/_shoppingStatus.js"></script>
