--- a/_takeProfilePicture.html
+++ b/_takeProfilePicture.html
@@ -1,4 +1,4 @@
-<div class="container text-center" id="profile-pic">
+<div class="container box text-center" id="profile-pic">
     <div class="row">
         <div class="col-md-4 col-lg-4" id="profile-button-box-outer">
             <div id="profile-button-box">
@@ -20,5 +20,9 @@
             </div>
         </div>
     </div>
+</div>
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
 </div>
 <script type="text/javascript" src="js/_takeProfilePicture.js"></script>
