--- a/_accSetting.html
+++ b/_accSetting.html
@@ -1,78 +1,80 @@
-<div id="accSetting">
+<div id="accSetting" class="container box" style="text-align: center">
+    <div class="row" style="height: 100%;">
 
-    <div class="container box" style="text-align: center">
-        <div class="row" style="height: 100%;">
-
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="position: relative; height: 442px;">
-                <!--<h2>Account Information</h2>-->
-                <div id="user-image-content" style="width: 100%;position: absolute; top: 50%; left: 50%;
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="position: relative; height: 442px;">
+            <!--<h2>Account Information</h2>-->
+            <div id="user-image-content" style="width: 100%;position: absolute; top: 50%; left: 50%;
                 transform: translate(-50%, -50%)">
-                    <img style="width: 80%; margin: 8%" class="img-circle" id="accSettingAbove-img"
-                         src="placeholder/person5.png"><br>
-                    <a  onclick="goToPage('_takeProfilePicture')">Edit Picture</a>
+                <img style="width: 80%; margin: 8%" class="img-circle" id="accSettingAbove-img"
+                     src="placeholder/person5.png"><br>
+                <a onclick="goToPage('_takeProfilePicture')">Edit Picture</a>
 
 
-                </div>
             </div>
-
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
-                <!--<h2>Account Information</h2>-->
-
-                <div id="accProfile">
-                    <form role="form" data-toggle="validator">
-                        <div class="input-field">
-                            <label for="accsetting_full_name" class=control-label">Full Name:</label>
-                            <input type="text" class="form-control" id="accsetting_full_name">
-                        </div>
-
-                        <div class="input-field">
-                            <label for="accsetting_email">Email:</label>
-                            <input type="email" class="form-control" id="accsetting_email"
-                                   pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
-                        </div>
-
-                        <div class="input-field">
-                            <label for="accsetting_phone">Phone Number:</label>
-                            <input type="text" class="form-control bfh-phone" data-country="US"
-                                   id="accsetting_phone">
-                        </div>
-
-                        <!--<h2>Address</h2>-->
-                        <div class="input-field">
-                            <label for="accsetting_street">Street:</label>
-                            <input type="text" class="form-control" id="accsetting_street">
-                        </div>
-
-                        <div class="input-field">
-                            <label for="accsetting_city">City:</label>
-                            <input type="text" class="form-control" id="accsetting_city">
-                        </div>
-
-                        <div class="input-field">
-                            <label for="accsetting_state">State:</label>
-                            <input type="text" class="form-control" id="accsetting_state">
-                        </div>
-
-                        <div class="input-field">
-                            <label for="accsetting_zip">ZIP Code:</label>
-                            <input type="number" class="form-control" id="accsetting_zip">
-                        </div>
-
-                    </form>
-                </div>
-            </div>
-
         </div>
-        <div class="row input-filed">
-            <div class="col-xs-12">
-                <div class="alert alert-danger fade in" id="accsetting_warning">
-                    <strong>Danger!</strong> There are some empty fields!
-                </div>
-                <div class="btn waves-effects orange" id="accsetting_submit_info" type="submit">Update
-                </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
+            <!--<h2>Account Information</h2>-->
+
+            <div id="accProfile">
+                <form role="form" data-toggle="validator">
+                    <div class="input-field">
+                        <label for="accsetting_full_name" class=control-label">Full Name:</label>
+                        <input type="text" class="form-control" id="accsetting_full_name">
+                    </div>
+
+                    <div class="input-field">
+                        <label for="accsetting_email">Email:</label>
+                        <input type="email" class="form-control" id="accsetting_email"
+                               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
+                    </div>
+
+                    <div class="input-field">
+                        <label for="accsetting_phone">Phone Number:</label>
+                        <input type="text" class="form-control bfh-phone" data-country="US"
+                               id="accsetting_phone">
+                    </div>
+
+                    <!--<h2>Address</h2>-->
+                    <div class="input-field">
+                        <label for="accsetting_street">Street:</label>
+                        <input type="text" class="form-control" id="accsetting_street">
+                    </div>
+
+                    <div class="input-field">
+                        <label for="accsetting_city">City:</label>
+                        <input type="text" class="form-control" id="accsetting_city">
+                    </div>
+
+                    <div class="input-field">
+                        <label for="accsetting_state">State:</label>
+                        <input type="text" class="form-control" id="accsetting_state">
+                    </div>
+
+                    <div class="input-field">
+                        <label for="accsetting_zip">ZIP Code:</label>
+                        <input type="number" class="form-control" id="accsetting_zip">
+                    </div>
+
+                </form>
             </div>
         </div>
 
     </div>
+    <div class="row input-filed">
+        <div class="col-xs-12">
+            <div class="alert alert-danger fade in" id="accsetting_warning">
+                <strong>Danger!</strong> There are some empty fields!
+            </div>
+            <div class="btn waves-effects orange" id="accsetting_submit_info" type="submit">Update
+            </div>
+        </div>
+    </div>
+
 </div>
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
+
 <script type="text/javascript" src="/js/_accSetting.js"></script>
