--- a/_cancelled.html
+++ b/_cancelled.html
@@ -11,4 +11,9 @@
         </div>
     </div>
 </div>
+
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
 <script src="/js/_cancelled.js"></script>
