--- a/_checkout.html
+++ b/_checkout.html
@@ -1,5 +1,5 @@
-<div id="checkout" class="container box">
-    <div class="text-center row">
+<div id="checkout" class="container text-center box">
+    <div class="row">
         <div class="col-xs-offset-2 col-xs-8">
             <h2>Continue Checkout</h2>
 
@@ -86,6 +86,9 @@
 
     </div>
 </div>
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
 </div>
 
 <script src="js/_checkout.js"></script>
