--- a/_confirmCompletion.html
+++ b/_confirmCompletion.html
@@ -13,20 +13,18 @@
             </div>
 
             <div class="container box">
-                <div class="row" >
+                <div class="row">
                     <div class="col-xs-12">
                         <ul id="_driver_confirm_list"></ul>
                     </div>
                 </div>
 
-                <div class = "row">
+                <div class="row">
                     <div class="col-xs-12">
-                        <div class="confirm-footer">
-                            <div id="_confirm_footerInfo">
-                                <div id="_driver_confirm_numItems"></div>
-                                <div id="_driver_confirm_price"></div>
-                                <div id="_driver_confirm_total_price"></div>
-                            </div>
+                        <div id="_confirm_footerInfo">
+                            <div id="_driver_confirm_numItems"></div>
+                            <div id="_driver_confirm_price"></div>
+                            <div id="_driver_confirm_total_price"></div>
                         </div>
                     </div>
                 </div>
@@ -38,11 +36,13 @@
                 </div>
             </div>
 
-
-
             <a type="button" class="btn waves-effects orange" id="driver_confirm_button">Confirm</a>
         </div>
     </div>
+</div>
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
 </div>
 
 <script src="js/_confirmCompletion.js"></script>
