--- a/_confirmTicket.html
+++ b/_confirmTicket.html
@@ -2,7 +2,7 @@
     <div class="row text-center">
         <div class="col-xs-12">
             <h2> Confirm your ticket</h2>
-            
+
             <div class="row">
                 <div class="col-xs-12">
                     <div id="driver_icon" class="col-xs-4"></div>
@@ -13,20 +13,18 @@
             </div>
 
             <div class="container box">
-                <div class="row" >
+                <div class="row">
                     <div class="col-xs-12">
                         <ul id="_confirm_list"></ul>
                     </div>
                 </div>
 
-                <div class = "row">
+                <div class="row">
                     <div class="col-xs-12">
-                        <div class="confirm-footer">
-                            <div id="_confirm_footerInfo">
-                                <div id="_confirm_numItems"></div>
-                                <div id="_confirm_price"></div>
-                                <div id="_confirm_total_price"></div>
-                            </div>
+                        <div id="_confirm_footerInfo">
+                            <div id="_confirm_numItems"></div>
+                            <div id="_confirm_price"></div>
+                            <div id="_confirm_total_price"></div>
                         </div>
                     </div>
                 </div>
@@ -37,12 +35,12 @@
                     </div>
                 </div>
             </div>
-
-
-
             <a type="button" class="btn waves-effects orange" id="confirm_button">Confirm</a>
         </div>
     </div>
 </div>
-
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
 <script src="js/_confirmTicket.js"></script>
