--- a/_congrats.html
+++ b/_congrats.html
@@ -5,9 +5,13 @@
         <div class="col-xs-12">
             <div>
                 <h2> Congratulations!</h2>
-                </p> We posted your ticket, and you will be notified as soon as it's accepted! </p>
+                <h5> We posted your ticket, and you will be notified as soon as it's accepted! </h5>
             </div>
         </div>
     </div>
 </div>
 
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
