--- a/_congratsTicketClosed.html
+++ b/_congratsTicketClosed.html
@@ -4,7 +4,7 @@
         <div class="col-xs-12">
             <div>
                 <h2> Congratulations!</h2>
-                <p> This ticket has been successfully closed. </p>
+                <h5> This ticket has been successfully closed. </h5>
                 <a type="button" class="btn waves-effects orange" id="_congratsClosed">
                     Go To You Orders
                 </a>
@@ -12,5 +12,8 @@
         </div>
     </div>
 </div>
-
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
 <script src="js/_congratsTicketClosed.js"></script>
