--- a/_contact.html
+++ b/_contact.html
@@ -32,5 +32,9 @@
         </div>
     </div>
 </div>
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
 <script type="text/javascript" src="/js/_contact.js"></script>
 
