--- a/_history.html
+++ b/_history.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 </div>
-<div class="footerBars">
+<div class="footerBars container">
     <div class="footer2"></div>
     <div class="footer3"></div>
 </div>
