--- a/_login.html
+++ b/_login.html
@@ -18,4 +18,8 @@
         </div>
     </div>
 </div>
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
 <script type="text/javascript" src="js/_login.js"></script>
