--- a/_passwordRecovery.html
+++ b/_passwordRecovery.html
@@ -14,7 +14,10 @@
         </div>
     </div>
 </div>
-
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
 
 <script type="text/javascript" src="js/_passwordRecovery.js"></script>
 
