--- a/_pendingPayment.html
+++ b/_pendingPayment.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 </div>
-<div class="footerBars">
+<div class="footerBars container">
     <div class="footer2"></div>
     <div class="footer3"></div>
 </div>
