--- a/_rateDriver.html
+++ b/_rateDriver.html
@@ -1,39 +1,41 @@
-
-<div id="rating-page">
-    <div class="container text-center box">
-        <div class="row">
-            <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
-                <h2 id="driver-name_rateDriver" data-id="5876"></h2>
-                <h3>Rate the driver!</h3>
-                <div class="row">
-                    <div class="col-xs-8-offset-2">
-                        <img id="driver-image" src="/placeholder/person.png"/>
-                    </div>
+<div class="container text-center box">
+    <div class="row">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
+            <h2 id="driver-name_rateDriver" data-id="5876"></h2>
+            <h3>Rate the driver!</h3>
+            <div class="row">
+                <div class="col-xs-8-offset-2">
+                    <img id="driver-image" src="/placeholder/person.png"/>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-xs-10-offset-1 col-sm-6-offset-3">
-                <div class="rating">
-                    <span id="driver_rating-1" class="glyphicon glyphicon-heart"></span>
-                    <span id="driver_rating-2" class="glyphicon glyphicon-heart"></span>
-                    <span id="driver_rating-3" class="glyphicon glyphicon-heart"></span>
-                    <span id="driver_rating-4" class="glyphicon glyphicon-heart"></span>
-                    <span id="driver_rating-5" class="glyphicon glyphicon-heart"></span>
-                </div>
-                <div class="row">
-                    <div class="col-xs-10 col-xs-offset-1">
-                        <a id="rate-driver" type="button" class="btn waves-effect orange driverRate_button">
-                            Rate!
-                        </a>
-                        <a id="rate-driver-skip" type="button" class="btn waves-effect orange driverRate_button">
-                            Skip
-                        </a>
-                    </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-10-offset-1 col-sm-6-offset-3">
+            <div class="rating">
+                <span id="driver_rating-1" class="glyphicon glyphicon-heart"></span>
+                <span id="driver_rating-2" class="glyphicon glyphicon-heart"></span>
+                <span id="driver_rating-3" class="glyphicon glyphicon-heart"></span>
+                <span id="driver_rating-4" class="glyphicon glyphicon-heart"></span>
+                <span id="driver_rating-5" class="glyphicon glyphicon-heart"></span>
+            </div>
+            <div class="row">
+                <div class="col-xs-10 col-xs-offset-1">
+                    <a id="rate-driver" type="button" class="btn waves-effect orange driverRate_button">
+                        Rate!
+                    </a>
+                    <a id="rate-driver-skip" type="button" class="btn waves-effect orange driverRate_button">
+                        Skip
+                    </a>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
+
 <script src="js/_rateDriver.js"></script>
 
