--- a/_receiptPictureEnterPrice.html
+++ b/_receiptPictureEnterPrice.html
@@ -5,31 +5,35 @@
             <h2>Receipt Picture</h2>
 
             <!--<div id="receipt-outer">-->
-                <!--<video width = 100% id="receipt_video1" muted autoplay></video>-->
-                <!--<canvas width = 100% id="receipt_canvas1"></canvas>-->
+            <!--<video width = 100% id="receipt_video1" muted autoplay></video>-->
+            <!--<canvas width = 100% id="receipt_canvas1"></canvas>-->
             <!--</div>-->
         </div>
     </div>
 
-            <div class="row">
-                <!--<div class="col-xs-4-offset-4">-->
-                    <div class= "col-xs-12" id="receipt-button-box">
-                        <!--<div class="btn btn-default" id="takeReceiptButton1">Take Photo</div>-->
-                        <!--<div class="btn btn-primary" id="redoReceiptButton1">Retake Photo</div>-->
-                        <!--<h4>or</h4>-->
-                        <label class="btn waves-effect orange">
-                            Upload From File<input class="hidden" type="file" id="uploadReceipt1" name="imageLoader"/>
-                        </label>
+    <div class="row">
+        <!--<div class="col-xs-4-offset-4">-->
+        <div class="col-xs-12" id="receipt-button-box">
+            <!--<div class="btn btn-default" id="takeReceiptButton1">Take Photo</div>-->
+            <!--<div class="btn btn-primary" id="redoReceiptButton1">Retake Photo</div>-->
+            <!--<h4>or</h4>-->
+            <label class="btn waves-effect orange">
+                Upload From File<input class="hidden" type="file" id="uploadReceipt1" name="imageLoader"/>
+            </label>
 
-                        <div class="input-field">
-                            <input type="text" class="form-control" name="username" id="enter_price_receipt"/><br>
-                            <label for="enter_price_receipt">Enter the price:</label>
-                        </div>
-
-                        <a class="btn waves-effects orange disabled" id="uploadReceiptButton1">Submit</a>
-                    </div>
-                <!--</div>-->
+            <div class="input-field">
+                <input type="text" class="form-control" name="username" id="enter_price_receipt"/><br>
+                <label for="enter_price_receipt">Enter the price:</label>
             </div>
+
+            <a class="btn waves-effects orange disabled" id="uploadReceiptButton1">Submit</a>
+        </div>
+        <!--</div>-->
+    </div>
+</div>
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
 </div>
 
 <script src="js/_receiptPictureEnterPrice.js"></script>
