--- a/_shopping.html
+++ b/_shopping.html
@@ -32,7 +32,7 @@
     </div>
 
 </div>
-<div class="footerBars">
+<div class="footerBars container">
     <div class="footer2"></div>
     <div class="footer3"></div>
 </div>
