--- a/_tickets.html
+++ b/_tickets.html
@@ -1,52 +1,51 @@
-<div class= "container text-center" id="tickets">
+<div class="container box text-center" id="tickets">
 
-    <div class="box">
-        <div class="row">
-            <div class="col-xs-12">
-                <div>
-                    <h2 class="text-center">Avaliable Tickets</h2>
-                </div>
-            </div>
-        </div>
-
-        <div class="row marketButtons">
-
-            <div class="col-xs-6 col-md-3">
-                <div class="store" data-name="ralphs">
-                    <h4>RALPHS</h4>
-                </div>
-            </div>
-
-            <div class="col-xs-6 col-md-3">
-                <div class="store" data-name="tjs">
-                    <h4>TJ's</h4>
-                </div>
-            </div>
-
-            <div class="col-xs-6 col-md-3">
-                <div class="store" data-name="wholeFoods">
-                    <h4>WHOLEFOODS</h4>
-                </div>
-            </div>
-
-            <div class="col-xs-6 col-md-3">
-                <div class="store" data-name="vons">
-                    <h4>VONS</h4>
-                </div>
-            </div>
-
-        </div>
-        <div class="row">
-            <div class="col-xs-12">
-                <ul id="tickets_content" class=text-center"></ul>
+    <div class="row">
+        <div class="col-xs-12">
+            <div>
+                <h2 class="text-center">Avaliable Tickets</h2>
             </div>
         </div>
     </div>
 
-    <div class="footerBars">
-        <div class="footer2"></div>
-        <div class="footer3"></div>
-    </div>
+    <div class="row marketButtons">
 
+        <div class="col-xs-6 col-md-3">
+            <div class="store" data-name="ralphs">
+                <h4>RALPHS</h4>
+            </div>
+        </div>
+
+        <div class="col-xs-6 col-md-3">
+            <div class="store" data-name="tjs">
+                <h4>TJ's</h4>
+            </div>
+        </div>
+
+        <div class="col-xs-6 col-md-3">
+            <div class="store" data-name="wholeFoods">
+                <h4>WHOLEFOODS</h4>
+            </div>
+        </div>
+
+        <div class="col-xs-6 col-md-3">
+            <div class="store" data-name="vons">
+                <h4>VONS</h4>
+            </div>
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <ul id="tickets_content" class=text-center"></ul>
+        </div>
+    </div>
 </div>
+
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
+
+
 <script type="text/javascript" src="/js/_tickets.js"></script>
