--- a/_yourDeliveries.html
+++ b/_yourDeliveries.html
@@ -1,6 +1,6 @@
-<div class="container text-center" id="yourDeliveries">
+<div class="container box text-center" id="yourDeliveries">
     <div class="row">
-        <div class="container box">
+        <div class="container">
             <div class="row">
                 <div class="col-xs-12">
                     <h2>Your Deliveries</h2>
@@ -13,14 +13,11 @@
                 </div>
             </div>
         </div>
-        <div class="footerBars">
-            <div class="footer2"></div>
-            <div class="footer3"></div>
-        </div>
+
     </div>
 
     <div class="row">
-        <div class="container box">
+        <div class="container">
             <div class="row">
                 <div class="col-xs-12">
                     <h3>Purchased Tickets</h3>
@@ -28,14 +25,11 @@
                 </div>
             </div>
         </div>
-        <div class="footerBars">
-            <div class="footer2"></div>
-            <div class="footer3"></div>
-        </div>
+
     </div>
 
     <div class="row">
-        <div class="container box">
+        <div class="container">
             <div class="row">
                 <div class="col-xs-12">
                     <h3>Delivered Tickets</h3>
@@ -43,11 +37,11 @@
                 </div>
             </div>
         </div>
-        <div class="footerBars">
-            <div class="footer2"></div>
-            <div class="footer3"></div>
-        </div>
+
     </div>
 </div>
-
+<div class="footerBars container">
+    <div class="footer2"></div>
+    <div class="footer3"></div>
+</div>
 <script type="text/javascript" src="/js/_yourDeliveries.js"></script>
