--- a/_driverList.html
+++ b/_driverList.html
@@ -34,7 +34,7 @@
         <div class="col-xs-12">
             <div class="row" id="_driver_footerInfo">
                 <div class="col-xs-4" id="_driver_numItems"></div>
-                <a id="_driver_submit_list" type="button" class="col-xs-4 waves-teal btn-flat waves-effects">
+                <a id="_driver_submit_list" type="button" class="col-xs-4 waves-teal btn waves-effects">
                     Submit
                 </a>
             </div>
