--- a/_viewTicket.html
+++ b/_viewTicket.html
@@ -16,7 +16,7 @@
             <div class="row" id="_viewTicket_footerInfo">
                 <div class="col-xs-4" id="_viewTicket_numItems"></div>
                 <a id="_viewTicket_submit_list" type="button"
-                   class="col-xs-4 text-center btn-flat waves-effect waves-teal">
+                   class="col-xs-4 text-center btn waves-effect waves-teal">
                     Accept Ticket
                 </a>
             </div>
