--- a/_cancelTicket.html
+++ b/_cancelTicket.html
@@ -1,10 +1,8 @@
 <div id="_cancelTicket" class="container box text-center">
     <div class="row">
         <div class="col-xs-12">
-
             <h2 id="listName_cancelTicket"></h2>
             <h3 id="phone_cancelTicket"></h3>
-
         </div>
     </div>
     <div class="row">
@@ -27,10 +25,10 @@
         <div class="col-xs-12">
             <div class="row" id="_cancelTicket_footerInfo">
                 <div class="col-xs-4" id="_cancelTicket_numItems"></div>
-                <a id="cancelTicket_list_btn" type="button" class="btn-flat waves-effect orange">
+                <a id="cancelTicket_list_btn" type="button" class="btn waves-effect orange">
                     Close
                 </a>
-                <a id="cancelTicket_cancel_btn" type="button" class="btn-flat waves-effect orange">
+                <a id="cancelTicket_cancel_btn" type="button" class="btn waves-effect orange">
                     Cancel ticket
                 </a>
 
