--- a/_shopping.html
+++ b/_shopping.html
@@ -1,12 +1,9 @@
 <div class="container box text-center" id="shopping">
-
-
     <div class="row" id="shoppingHeader">
         <div class="col-xs-12">
             <h2>Shopping List</h2>
         </div>
     </div>
-
     <div class="row">
         <div class="col-xs-12">
             <form id="shopping_list_form">
@@ -19,18 +16,16 @@
             </ul>
         </div>
     </div>
-
     <div class="row">
         <div class="col-xs-12">
             <div class="row" id="footerInfo">
                 <div class="col-xs-4" id="shopping_numItems"></div>
-                <a type="button" class="col-xs-4 waves-teal btn waves-effects">
+                <a id="shopping_submit_list" type="button" class="col-xs-4 waves-teal btn waves-effects">
                     Submit
                 </a>
             </div>
         </div>
     </div>
-
 </div>
 <div class="footerBars container">
     <div class="footer2"></div>
