--- a/_receiptPictureEnterPrice.html
+++ b/_receiptPictureEnterPrice.html
@@ -26,7 +26,7 @@
                 <label for="enter_price_receipt">Enter the price:</label>
             </div>
 
-            <a class="btn waves-effects orange disabled" id="uploadReceiptButton1">Submit</a>
+            <a class="btn waves-effects orange disabled" id="submitReceiptButton1">Submit</a>
         </div>
         <!--</div>-->
     </div>
